--- a/template/configs/index.html
+++ b/template/configs/index.html
@@ -2,7 +2,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vue Pages Workflow</title>
+    <title><%= name %></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta id="entry-1"/>
   </head>
   <body>
